add favicon and description

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css">
-    <title>Phaser Vue Template</title>
+    <title>Amazing Maze</title>
+    <meta name="description" content="Dive into a maze-solving adventure! 
+    Navigate twisting paths, avoid dead-ends, and race against the clock in 
+    this sleek, mobile-friendly HTML5 maze game. Challenge yourself with 
+    varying difficulty levels and claim victory as the ultimate maze master!" />
 </head>
 
 <body>
